@@ -2,6 +2,11 @@ class UserMailer < ActionMailer::Base
   default from: "#{DEFAULT_APP_NAME} <#{ActionMailer::Base.smtp_settings[:user_name]}>"
   add_template_helper(ApplicationHelper)
 
+  def help_email(current_applicant, subject, body)
+    mail(to: 'rmueller@rics.bwh.harvard.edu', #(defined?(TG_ADMIN_EMAIL) and not TG_ADMIN_EMAIL.blank?) ? TG_ADMIN_EMAIL : ActionMailer::Base.smtp_settings[:user_name],
+         reply_to: current_applicant.email_with_name, subject: subject + " - " + current_applicant.name, body: body + "\n\n[This email was generated by the #{DEFAULT_APP_NAME} System Mailer.]\n\nApplicant: #{SITE_URL}/applicants/#{current_applicant.id}")
+  end
+
   def notify_system_admin(system_admin, user)
     setup_email
     @system_admin = system_admin
