@@ -1,7 +1,10 @@
 <% @title = "My #{@annual.year} Annual Information" %>
 
 <div class="page-header">
-  <h1><%= @title %></h1>
+  <h1>
+    <%= @title %>
+    <div class="pull-right"><%= link_to "Help", '#', class: 'btn btn-info', data: { object: 'modal-show', target: '#help_email_modal' } %></div>
+  </h1>
   <p class="lead">
     Please complete the fields below with your most recent information (September <%= @annual.year - 1 %> through September <%= @annual.year %>).  If you have no new information to add, please write "N/A" in the field, as it will not allow you to submit without completing all fields.
     If you do not have an NIH Other Support, please attach a document that details your current funding situation.
@@ -52,3 +55,5 @@
     <%= link_to 'Cancel', dashboard_applicants_path, class: 'btn' %>
   </div>
 <% end %>
+
+<%= render partial: 'applicants/help_modal', locals: { applicant: current_applicant, subject: 'Updating Annual Information' } %>
