@@ -1,0 +1,28 @@
+<div id="help_email_modal" class="modal" style="display:none">
+  <div class="modal-header">
+    Help Request Email
+    <a class="close" data-dismiss="modal">×</a>
+  </div>
+  <div class="modal-body">
+    <%= form_tag help_email_applicant_path(applicant), method: :post, remote: true, id: 'help_email_form' do %>
+      <div class="control-group">
+        <%= label_tag :subject, nil, class: 'control-label' %>
+        <div class="controls">
+          <%= text_field_tag :subject, "Help Request [#{subject}]", style: 'width:95%' %>
+        </div>
+      </div>
+
+      <div class="control-group">
+        <%= label_tag :body, nil, class: 'control-label' %>
+        <div class="controls">
+          <%= text_area_tag :body, '', rows: 20, style: 'width:95%', placeholder: 'Please explain what you are attempting to do here.' %>
+        </div>
+      </div>
+    <% end %>
+  </div>
+
+  <div class="modal-footer">
+    <%= link_to 'Close', '#', class: 'btn', data: { dismiss: 'modal' } %>
+    <%= link_to 'Send Email', '#', class: 'btn btn-primary', data: { object: 'submit', target: '#help_email_form' } %>
+  </div>
+</div>
