@@ -7,6 +7,7 @@
       <span class="label label-warning">Draft</span>
     <% end %>
     <%= link_to "Exit Interview", exit_interview_applicants_path, class: 'btn btn-mini' if current_applicant.enrolled? %>
+    <div class="pull-right"><%= link_to "Help!", '#', class: 'btn btn-info', data: { object: 'modal-show', target: '#help_email_modal' } %></div>
   </h1>
 </div>
 
@@ -61,3 +62,5 @@
   </div>
 </div>
 <% end %>
+
+<%= render partial: 'applicants/help_modal', locals: { applicant: current_applicant, subject: 'Dashboard' } %>
