@@ -1,0 +1,2 @@
+$("#help_email_modal").modal('hide');
+flashMessage("Help request submitted successfully.", 'info');
