@@ -48,7 +48,6 @@ one:
   desired_start_date: 2012-04-16
   marital_status: single
   assurance: true
-  email: one@example.com
   personal_statement: MyText
   confirmed_at: 2012-05-07 10:30:00
   alien_registration_number: MyString
@@ -109,7 +108,6 @@ two:
   desired_start_date: 2012-04-16
   marital_status: married
   assurance: false
-  email: two@example.com
   personal_statement: MyText
   confirmed_at: 2012-05-07 10:30:00
   alien_registration_number: MyString
